docs: specify version 0.22.0 in upgrade guide

--- a/docs/data-tests/dbt/upgrade-package.mdx
+++ b/docs/data-tests/dbt/upgrade-package.mdx
@@ -12,7 +12,7 @@ On new releases, you will need to upgrade the Elementary dbt package.
 ```yml packages.yml
 packages:
   - package: elementary-data/elementary
-    version: < latest version >
+    version: 0.22.0
 ```
 
 2. Run the command:
