--- a/docs/data-tests/dbt/quickstart-package.mdx
+++ b/docs/data-tests/dbt/quickstart-package.mdx
@@ -11,4 +11,4 @@ import QuickstartPackageInstall from '/snippets/quickstart-package-install.mdx';
 
 ## What's next?
 
-Take a moment to ⭐️ [star our Github repo!](https://github.com/elementary-data/elementary) ⭐️ (It helps us a lot)
+Take a moment to ⭐️ [star our Github repo!](https://github.com/elementary-data/elementary) ⭐️ (It helps us a lot!)
