--- a/docs/cloud/integrations/log-streaming/splunk.mdx
+++ b/docs/cloud/integrations/log-streaming/splunk.mdx
@@ -81,16 +81,13 @@ Each user activity log entry includes:
 {
   "timestamp": "2024-01-15T14:30:45.123456Z",
   "log_type": "audit",
-  "action": "user_login",
+  "event_name": "user_login",
   "success": true,
-  "user": {
-    "id": "usr_abcdef1234567890",
-    "email": "john.doe@example.com",
-    "name": "John Doe"
-  },
+  "user_email": "john.doe@example.com",
+  "user_name": "John Doe",
   "env_id": "env_7890123456abcdef",
   "env_name": "Production",
-  "data": {
+  "event_content": {
     "additional": "context"
   }
 }
@@ -104,11 +101,11 @@ Each system log entry includes:
 {
   "timestamp": "2024-01-15T14:30:45.123456Z",
   "log_type": "system",
-  "action": "dbt_data_sync_completed",
+  "event_name": "dbt_data_sync_completed",
   "success": true,
   "env_id": "env_7890123456abcdef",
   "env_name": "Production",
-  "data": {
+  "event_content": {
     "environment_id": "env_789",
     "environment_name": "Production"
   }
@@ -119,15 +116,13 @@ Each system log entry includes:
 
 - `timestamp`: ISO 8601 timestamp of the event (UTC)
 - `log_type`: Either `"audit"` for user activity logs or `"system"` for system logs
-- `action`: The specific action that was performed (e.g., `user_login`, `create_test`, `dbt_data_sync_completed`)
+- `event_name`: The specific action that was performed (e.g., `user_login`, `create_test`, `dbt_data_sync_completed`)
 - `success`: Boolean indicating whether the action completed successfully
-- `user`: User information (only present in audit logs)
-  - `id`: User ID
-  - `email`: User email address
-  - `name`: User display name
-- `env_id`: Environment identifier (empty string for account-level actions)
-- `env_name`: Environment name (empty string for account-level actions)
-- `data`: Additional context-specific information as a JSON object
+- `user_email`: User email address
+- `user_name`: User display name
+- `env_id`: Environment identifier (empty for account-level actions)
+- `env_name`: Environment name (empty for account-level actions)
+- `event_content`: Additional context-specific information as a JSON object
 
 <Frame>
   <div className="dark:bg-white rounded-md p-4">
@@ -154,8 +149,8 @@ source="elementary-cloud" log_type="audit"
 source="elementary-cloud" log_type="system"
 
 # Search for specific actions
-source="elementary-cloud" action="user_login"
-source="elementary-cloud" action="dbt_data_sync_completed"
+source="elementary-cloud" event_name="user_login"
+source="elementary-cloud" event_name="dbt_data_sync_completed"
 
 # Filter by environment
 source="elementary-cloud" env_name="Production"
@@ -164,7 +159,7 @@ source="elementary-cloud" env_name="Production"
 source="elementary-cloud" success=false
 
 # Search by user email
-source="elementary-cloud" user.email="john.doe@example.com"
+source="elementary-cloud" user_email="john.doe@example.com"
 ```
 
 ## Disabling Log Streaming
