Add native newsletter signup component and replace HubSpot iframe in stay-updated page

--- a/docs/oss/quickstart/stay-updated.mdx
+++ b/docs/oss/quickstart/stay-updated.mdx
@@ -5,6 +5,8 @@ description: "Get notified about new features, breaking changes, and data qualit
 icon: "square-5"
 ---
 
+import NewsletterSignup from '/snippets/newsletter-signup';
+
 Elementary moves fast — new tests, integrations, and features ship regularly.
 
 Subscribe to stay in the loop so nothing catches you off guard in production.
@@ -23,19 +25,7 @@ Our Slack is where data teams share experiences, talk to the team and troublesho
 
 Subscribe for release highlights, breaking change alerts, and best practices from teams running Elementary at scale.
 
-<iframe
-
-  src="https://share-eu1.hsforms.com/1RzSGC2j7T3-q2q-xTmGv5w2cwlc1 "
-
-  width="100%"
-
-  height="150"
-
-  frameBorder="0"
-
-  title="Subscribe to Elementary newsletter"
-
-/>
+<NewsletterSignup />
 
 <Tip>
 
