Convert newsletter signup to MDX and update stay-updated page import

--- a/docs/oss/quickstart/stay-updated.mdx
+++ b/docs/oss/quickstart/stay-updated.mdx
@@ -5,7 +5,7 @@ description: "Get notified about new features, breaking changes, and data qualit
 icon: "square-5"
 ---
 
-import NewsletterSignup from '/snippets/newsletter-signup';
+import NewsletterSignup from '/snippets/newsletter-signup.mdx';
 
 Elementary moves fast — new tests, integrations, and features ship regularly.
 
