Revise stay updated section for clarity
Updated the content to emphasize staying informed about releases and community tips.

--- a/docs/oss/quickstart/stay-updated.mdx
+++ b/docs/oss/quickstart/stay-updated.mdx
@@ -1,13 +1,10 @@
 ---
 title: "Stay updated"
 sidebarTitle: "Stay updated"
-description: "Get notified about new features, breaking changes, and data quality tips"
 icon: "square-5"
 ---
 
-Elementary moves fast — new tests, integrations, and features ship regularly.
-
-Subscribe to stay in the loop so nothing catches you off guard in production.
+Elementary moves fast — stay in the loop on new releases, breaking changes, and tips from the team and community.
 
 ## Join the community
 
